Important changes from 1.4.2 => 1.4.3
============================================================
 * gtr_organisations renamed to gtr_organizations
 * table gems__countries is no longer in use

Important changes from 1.4.1 => 1.4.2
============================================================
 * To have an autosubmit form it is enough now to just use $form->setAutoSubmit($href, $targetId)
 * Introduced Gems_FormattedData, which takes a model and array of data and applies all formatting rules to the data
   (see export for more info)
 * The menu is reorganised and some items no longers have privileges assigned to them. Be careful with project menus!
 * Tooltip decorator now uses jQuery icon instead of an image
 * Print view of tab-forms now output the tab-titles for better readability, this introduced the class print-only

Important changes from 1.4 => 1.4.1
============================================================
 * Menu containers no longer have a privilege, this could have impact on custom menu's searching for a container.
 * Default layouts have changed to make displaying the project name optional. To display the project name
   add the following line to the project.ini:
       layoutPrepare.projectName = header


============================================================
Library changes for 1.3 => 1.4

- New track engine, all code from Gems_Source and Gems_Token to Gems_Tracker
- Moved snippets from MUtil_Controller to their own top level package MUtil_Snippets, this allows snippets to load snippets
- The backwards compatible Gems_Menu extensions Gems_Menu->getParameterSource() and Gems_Menu->getMenuList() are easier to use than their predecessors.

Some examples:

Checking for token completion:
Old:
    $tokenLibrary = Gems_Tokens::getLibrary($this->db);
    $tokenLibrary->checkAnswers($data['grs_id_user'], $this->session->user_id);
New:
    $this->loader->getTracker()->processCompletedTokens($data['grs_id_user'], $this->session->user_id);
