@@ -1,3 +1,7 @@
+Important changes from 1.4.3 => 1.5
+============================================================
+MailController is now claaed MailTemplateController
+
 Important changes from 1.4.2 => 1.4.3
 ============================================================
  * gtr_organisations renamed to gtr_organizations
